--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "inguewa",
-    "short_name": "inguewa",
+    "name": "Inguewa",
+    "short_name": "Inguewa",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
