--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   flutter_carousel_widget: ^2.2.0
   url_launcher: ^6.3.0
+  flutter_launcher_icons: ^0.13.1
+  rename_app: ^1.3.1
 
 dev_dependencies:
   flutter_test:
