--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.2
-  intl: ^0.18.0
-  flutter_native_image: ^0.0.6+1
+  intl: 0.19.0
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.2.3
@@ -52,6 +51,8 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   flutter_carousel_widget: ^2.2.0
   url_launcher: ^6.3.0
+  sliding_clipped_nav_bar: ^3.1.1
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
